<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mutable_robot_state_publisher</name>
  <version>2.0.0</version>
  <description>
    This package allows you to publish the state of a robot to
    <a href="http://ros.org/wiki/tf">tf</a>. Once the state gets published, it is
    available to all components in the system that also use <tt>tf</tt>.
    The package takes the joint angles of the robot as input
    and publishes the 3D poses of the robot links, using a kinematic
    tree model of the robot. The package can both be used as a library
    and as a ROS node.  This package has been well tested and the code
    is stable. No major changes are planned in the near future
  </description>
  <maintainer email="rsinnet@misorobotics.com">Ryan Sinnet</maintainer>
  <maintainer email="isucan@google.com">Ioan Sucan</maintainer>
  <license>BSD</license>
  <url>http://wiki.ros.org/robot_state_publisher</url>
  <author email="wim@willowgarage.com">Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend condition="$ROS_DISTRO != noetic" version_gte="1.3.0">orocos_kdl</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">liborocos-kdl</build_depend>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic" version_gte="1.3.0">orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">liborocos-kdl</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export />
</package>
